# muscriptor

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: pypi.yml
muscriptor-rs/: Cargo.toml  README.md  build-cuda.sh  build-mac.sh  realtime_ui.py
muscriptor-rs/src/: audio.rs  config.rs  download.rs  lib.rs  main.rs  mel.rs  midi.rs  model.rs  realtime.rs  sampling.rs  vocab.rs
