[package]
name = "muscriptor-rs"
version = "0.1.0"
edition = "2021"
description = "Audio-to-MIDI transcription using a transformer language model (Rust port)"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
hound = "3.5"
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
fastrand = "2"
dirs = "6"
